# frameworks_proto_logging

./: atoms.proto  project.config
stats/: Android.bp  BUILD.gn  atom_field_options.proto  atoms.proto  atoms_extensions_pulled.proto  atoms_extensions_pushed.proto
stats/atoms/: README.md
stats/atoms/art/: art_extension_atoms.proto  background_extension_dexopt_atoms.proto  odrefresh_extension_atoms.proto
stats/atoms/bluetooth/: bluetooth_extension_atoms.proto
stats/atoms/conscrypt/: conscrypt_extension_atoms.proto
stats/atoms/devicepolicy/: devicepolicy_extension_atoms.proto
stats/atoms/expresslog/: expresslog_atoms.proto
stats/atoms/framework/: framework_extension_atoms.proto
stats/atoms/ike/: ike_extension_atoms.proto
stats/atoms/ipsec/: ipsec_extension_atoms.proto
stats/atoms/media/: media_codec_extension_atoms.proto  media_drm_atoms.proto
stats/atoms/movement/: significant_motion_atoms.proto
stats/express/: Android.bp  express_config.proto
stats/message/: mediametrics_message.proto
stats/stats_log_api_gen/: Android.bp  Collation.cpp  Collation.h  TEST_MAPPING  java_writer.cpp  java_writer.h  java_writer_vendor.h  main.cpp  native_writer.cpp  native_writer.h  native_writer_vendor.cpp  rust_wrapper.hpp  rust_writer.cpp  rust_writer.h  test.proto  test_api_gen.cpp  test_api_gen_vendor.cpp  test_collation.cpp  test_extensions_pulled.proto  test_extensions_pushed.proto  test_external.proto  test_feature_atoms.proto  test_vendor_atoms.proto  utils.cpp  utils.h
stats/vendor-log-api-gen/: Android.bp  log.h  main.cpp  test_collation_external.cpp
(+86 files in other folders)
